TimeWarp.Architecture/DevOps/Kubernetes/3_Network/Ingress/web_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-ingress
  namespace: $ApplicationNamespace
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: '/`$2'
  labels:
    app.kubernetes.io/part-of: $ApplicationNamespace
spec:
  tls:
  - hosts:
    - $DnsHostName
    secretName: aks-ingress-tls
  rules:
  - host: $DnsHostName
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: web-server
            port:
              number: 5200
      - path: /()(api.*)
        pathType: Prefix
        backend:
          service:
            name: api-server
            port:
              number: 5255
